--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="author" content="Janet Wagner">
 
     <!-- CSS Stylesheet -->
-    <link rel="stylesheet" type="text/css" href="stylesheets/style.css" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/styles.css" />
 
 
 </head>
