--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                 <span itemprop="name">高 超</span>
                             </h1>
                             <h3>
-                                <span itemprop="jobTitle">手游前端/后端开发工程师 技术经理</span>
+                                <span itemprop="jobTitle">前端/后端开发工程师 技术经理</span>
                             </h3>
 
                             <!-- Begin PostalAddress Schema -->
@@ -82,9 +82,7 @@
                     <dd>
 
                         <section class="summary">
-                            生是CS的人，死是CS的死人
-                            <br>勤于、善于学习、编写、调试代码的码农</section>
-
+                            <br>做一个勤于、善于学习、编写、调试代码的coder</section>
                     </dd>
                 </dl>
                 <!-- End Profile Section -->
@@ -100,13 +98,12 @@
 
                             <section id="skills">
                                 <ul class="list1">
-                                    <li itemprop="itemListElement">HTML5</li>
-                                    <li itemprop="itemListElement">JavaScript</li>
-                                    <li itemprop="itemListElement">Java</li>
+                                     <li itemprop="itemListElement">Java</li>
                                     <li itemprop="itemListElement">C++</li>
+                                    <li itemprop="itemListElement">JavaScript</li>
+                                    <li itemprop="itemListElement">objective-c</li>
                                 </ul>
                             </section>
-
                         </dd>
                     </dl>
 
@@ -135,7 +132,7 @@
                                 <p class="time">2013.11 &#45; 现在</p>
 
                                 <p itemprop="description">
-                                    带领团队从事文化创意类手游开发,已上线项目有《小龙游常州》《前中记忆》,正在进行《龙城达人》开发
+                                    带领团队从事文化创意类手游开发,已上线项目有《小龙游常州》《前中记忆》,《龙城达人》开发
                                     <br>目前致力于cocos2d-js开发 计划把-x版本往js版本迁徙</p>
 
                             </div>
