--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             <div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
                                 <ul class="info_1">
                                     <li class="address">
-                                        <span itemprop="streetAddress">江苏常州新北区薛家顺园新村327栋甲1503</span>
+                                        <span itemprop="streetAddress">江苏常州新北区薛家顺园新村</span>
                                     </ul>
                                 </div>
                                 <!-- End PostalAddress Schema -->
