--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <dd>
 
                         <section class="summary">
-                            <br>做一个勤于、善于学习、编写、调试代码的coder</section>
+                            做一个勤于、善于学习、编写、调试代码的coder</section>
                     </dd>
                 </dl>
                 <!-- End Profile Section -->
