--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                      <li itemprop="itemListElement">Java</li>
                                     <li itemprop="itemListElement">C++</li>
                                     <li itemprop="itemListElement">JavaScript</li>
-                                    <li itemprop="itemListElement">objective-c</li>
+                                    <li itemprop="itemListElement">Objective-c</li>
                                 </ul>
                             </section>
                         </dd>
@@ -134,7 +134,7 @@
 
                                 <p itemprop="description">
                                     带领团队从事文化创意类手游开发,已上线项目有《小龙游常州》《前中记忆》,《龙城达人》开发
-                                    <br>目前致力于cocos2d-js开发 计划把-x版本往js版本迁徙</p>
+                                    <br></p>
 
                             </div>
 
