--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                                 </p>
                                 <p class="time">2012.7 &#45; 2013.11</p>
 
-                                <p itemprop="description">独立负责页游《名将传说》后端开发</p>
+                                <p itemprop="description">负责页游《名将传说》后端开发</p>
 
                             </div>
 
@@ -164,7 +164,7 @@
                                 </p>
                                 <p class="time">2011.7 &#45;2012.7</p>
 
-                                <p itemprop="description">太阳能逆变器商用小机控制系统软件开发、软件持续集成</p>
+                                <p itemprop="description">太阳能逆变器户用小机控制系统软件开发、软件持续集成</p>
 
                             </div>
 
