--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                                     <span itemprop="jobTitle">后端开发工程师</span>
                                 </h2>
                                 <p class="bus1">
-                                    <span itemprop="name">上海锐战网络</span>
+                                    <span itemprop="name">上海锐战网络科技有限公司</span>
                                 </p>
                                 <p class="time">2012.7 &#45; 2013.11</p>
 
@@ -160,7 +160,7 @@
                                     <span itemprop="jobTitle">嵌入式开发工程师</span>
                                 </h2>
                                 <p class="bus1">
-                                    <span itemprop="name">华为技术</span>
+                                    <span itemprop="name">华为技术科技有限公司</span>
                                 </p>
                                 <p class="time">2011.7 &#45;2012.7</p>
 
