--- a/index.html
+++ b/index.html
@@ -99,10 +99,11 @@
 
                             <section id="skills">
                                 <ul class="list1">
-                                     <li itemprop="itemListElement">Java</li>
+                                    <li itemprop="itemListElement">Java</li>
                                     <li itemprop="itemListElement">C++</li>
                                     <li itemprop="itemListElement">JavaScript</li>
                                     <li itemprop="itemListElement">Objective-c</li>
+                                    <li itemprop="itemListElement">CET-6</li>
                                 </ul>
                             </section>
                         </dd>
