--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                                 <p itemprop="description">
                                     带领团队从事文化创意类手游开发,已上线项目有《小龙游常州》《前中记忆》,《龙城达人》开发
                                     <br>
-                                
+                                    负责前后端框架构建，前端基于cocos2d-x,后端基于jfinal 网络通信基于netty+websocket实现全双工通信。
                                     </p>
 
                             </div>
