--- a/index.html
+++ b/index.html
@@ -134,9 +134,11 @@
                                 <p class="time">2013.11 &#45; 现在</p>
 
                                 <p itemprop="description">
-                                    带领团队从事文化创意类手游开发,已上线项目有《小龙游常州》《前中记忆》,《龙城达人》开发
+                                    带领团队从事文化创意类手游开发,已上线项目有《小龙游常州》《前中记忆》,《龙城达人》开发。
+                                    实现了前后端框架构建，前端基于cocos2d-x,后端基于jfinal 网络通信基于netty+websocket实现
+                                    全双工通信。负责具体业务模块编写、指导、测试工作。
                                     <br>
-                                    负责前后端框架构建，前端基于cocos2d-x,后端基于jfinal 网络通信基于netty+websocket实现全双工通信。
+                                    原生开发ios仿化龙巷:<a href="http://">地址</a>
                                     </p>
 
                             </div>
