--- a/index.html
+++ b/index.html
@@ -137,8 +137,9 @@
                                     带领团队从事文化创意类手游开发,已上线项目有《小龙游常州》《前中记忆》,《龙城达人》开发。
                                     实现了前后端框架构建，前端基于cocos2d-x, 后端基于jfinal, 网络通信基于netty+websocket实现
                                     全双工通信。负责具体业务模块编写、指导、测试等工作。
-                                    <br/>
-                                    原生开发ios仿化龙巷:<a href="http://">地址</a>
+                                    <br>
+                                    <br>
+                                    原生开发ios仿化龙巷:<a href="https://github.com/realcrazysun/hualongxiang">地址</a>
                                     </p>
 
                             </div>
