--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
                                     全双工通信。负责具体业务模块编写、指导、测试等工作。
                                     <br>
                                     <br>
-                                    原生开发ios仿化龙巷:<a class="site_url" href="https://github.com/realcrazysun/hualongxiang">地址</a>
+                                    原生开发ios仿化龙巷:<div class="site_url"><a  href="https://github.com/realcrazysun/hualongxiang">地址</a></div>
                                     <br>
                                     <br>
-                                    原生开发android仿化龙巷:<a class="site_url" href="https://github.com/realcrazysun/HLXAndroid">地址</a>
+                                    原生开发android仿化龙巷:<div class="site_url"><a  href="https://github.com/realcrazysun/HLXAndroid">地址</a></div>
                                     </p>
 
                             </div>
