--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
                                     全双工通信。负责具体业务模块编写、指导、测试等工作。
                                     <br>
                                     <br>
-                                    原生开发ios仿化龙巷:<div class="site_url"><a  href="https://github.com/realcrazysun/hualongxiang">地址</a></div>
+                                    原生开发ios仿化龙巷:<a  href="https://github.com/realcrazysun/hualongxiang">地址</a>
                                     <br>
                                     <br>
-                                    原生开发android仿化龙巷:<div class="site_url"><a  href="https://github.com/realcrazysun/HLXAndroid">地址</a></div>
+                                    原生开发android仿化龙巷:<a  href="https://github.com/realcrazysun/HLXAndroid">地址</a>
                                     </p>
 
                             </div>
@@ -158,7 +158,7 @@
                                 </p>
                                 <p class="time">2012.7 &#45; 2013.11</p>
 
-                                <p itemprop="description">负责页游《名将传说》后端开发</p>
+                                <p itemprop="description">负责页游《名将传说》后端开发 独立编写竞技场、通商等大型模块, 做过人人网、91等联运平台对接</p>
 
                             </div>
 
